removed navbar & scroll-snap navigation for mobile devices to avoid bugs on safari

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -403,7 +403,7 @@ img {
   section {
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 80px;
+    padding-top: 40px;
   }
   .carousel-container {
     width: 90vw;
@@ -432,5 +432,8 @@ img {
   }
   #main-image {
     height: auto;
+  }
+  nav {
+    display: none;
   }
 }
